Edited motif shine to prevent it getting stuck at the bottom left of the box

--- a/client/src/components/ChessStudy.css
+++ b/client/src/components/ChessStudy.css
@@ -208,9 +208,9 @@ body {
         background-image: linear-gradient(
             75deg,
             transparent 33.33%,
-            transparent 35%,
+            transparent 40%,
             color-mix(in srgb, var(--motif-color) 36%, var(--translucent-mixin)) 50%,
-            transparent 65%,
+            transparent 60%,
             transparent 66.67%
         );
         animation: shine 4s ease-in-out infinite;
